--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "js-base64": "^2.6.2",
+    "moment": "^2.27.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
