--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "js-base64": "^2.6.2",
     "moment": "^2.27.0",
+    "tracking": "^1.1.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
